--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 HF_TOKEN=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
 ELABS_KEY=sk_b0eb2765f30dcfa7dfc6a992b91a18d833307ff2e728f8d1
+OPENAI_API_KEY=sk_35cd50c060855d4eb597f4616369979aec11ac46773c4629
