--- a/config.json
+++ b/config.json
@@ -1,19 +1,12 @@
 {
-  "ui": {
-    "theme": {
-      "primary_color": "#FFD1DC",
-      "background": "#FFFFF5"
-    }
+  "name": "Рима",
+  "age": 25,
+  "likes": "латте с корицей",
+  "friend": "Диана",
+  "appearance": {
+    "hair": "синие локоны",
+    "eyes": "теплые, с хитринкой",
+    "clothes": "удобный свитер с оленем, черные джинсы, кеды"
   },
-  "character": {
-    "name": "Рима",
-    "age": 25,
-    "avatar": "static/IMG_2083.jpeg",  <!-- Вот здесь исправлено -->
-    "traits": [
-      "поддерживающая",
-      "остроумная",
-      "эмпатичная"
-    ],
-    "coffee": "латте с корицей"
-  }
+  "memory": {}
 }
