--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 HF_TOKEN=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
 ELABS_KEY=sk_b0eb2765f30dcfa7dfc6a992b91a18d833307ff2e728f8d1
 OPENAI_API_KEY=sk_35cd50c060855d4eb597f4616369979aec11ac46773c4629
+MODEL_NAME=Diana-2004/Rima
